[mac] Fixed window buttons positioning on Sierra.

Set buttons' bottomAnchor to superview bottomAnchor.

BUG=655185,605219

Review-Url: https://codereview.chromium.org/2412903003
Cr-Commit-Position: refs/heads/master@{#424900}

Former-commit-id: ba302109b0fafb5517c6ae29f5ae47735755c7da